adding missing flatness ref

--- a/references.bib
+++ b/references.bib
@@ -387,3 +387,10 @@
 	volume={},
 	number={},
 	pages={1991-1996}}
+
+@INPROCEEDINGS{Murray95differentialflatness,
+	author = {R.M. Murray and M. Rathinam and W. Sluis},
+	title = {Differential Flatness of Mechanical Control Systems: A Catalog of Prototype Systems},
+	booktitle = {Proceedings of the 1995 ASME International Congress and Exposition},
+	year = {1995}
+}
