--- a/related_work.tex
+++ b/related_work.tex
@@ -12,12 +12,12 @@ More recently, several techniques consider the problem of formal guarantees for 
 Existing methods can be categorized based on the dynamics that they can handle (e.g., linear or nonlinear),
 whether the system is subject to disturbances, considered class of specifications, and scalability. 
 A common approach to solve for reach-avoid specifications is to perform the high-level planning over a lower dimensional dynamical model and then use
-Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) methods to obtain a low-level controller ensuring a bounded error between the 
-two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust}. 
+Sum-of-Squares (SOS) programming or Hamilton Jacobi (HJ) or satisfiabiity modulo convex programming (SMC) methods to obtain a low-level controller ensuring a bounded error between the 
+two models \cite{herbert2017fastrack,DBLP:journals/corr/abs-1911-09773,singh2018robust,sun2019}. 
 In contrast to \cite{herbert2017fastrack,singh2018robust}, our method does not require finding 
 a linear mapping between the low and high dimensional models. 
 While we choose SCOTS because the algorithm can be effectively parallelized \cite{KhaledZ19pfaces}, in principle, we could
-also use SOS or Hamilton Jacobi approaches. The existing schemes that solve the guaranteed motion planning problems in a centralized manner (e.g. \cite{sun2019}) cannot scale well.
+also use SOS or Hamilton Jacobi or SMC approaches. %The existing schemes that solve the guaranteed motion planning problems in a centralized manner (e.g. \cite{sun2019}) cannot scale well.
 Some other works that only consider special classes of systems such as linear (\cite{fan2018controller,wongpiromsarn2012receding,Rodionova2020LearningtoFlyLC}), 
 disturbance-free (\cite{tedrake2010lqr,fan2020fast,Srinivasan2018}), or finite transition systems (\cite{Yang2017milp}). 
 In contrast, our method supports arbitrary continuous time nonlinear dynamics and provides a guarantee 
