--- a/abstract.tex
+++ b/abstract.tex
@@ -10,9 +10,9 @@ Techniques based on formal synthesis that guarantee satisfaction of temporal spe
 We address these limitations by proposing a two-level solution approach that combines fast global nominal trajectory generation and local application of formal synthesis.
 At the top level, we ignore the effect of disturbances and obtain a joint open-loop plan for the system using a fast trajectory optimizer.
 At the lower level, we use abstraction-based controller design to synthesize a set of decentralized feedback controllers 
-that track the high level plan against worst-case disturbances thus ensure satisfaction of the global specification.
+that track the high level plan against worst-case disturbances, thus ensuring satisfaction of the global specification.
 We demonstrate the effectiveness of our approach on several multi-robot examples using two particular classes of control specifications.
 In the first type, we assume that the robots need to fulfill their own reach-avoid tasks while avoiding collision with the other robots.
 In the second type, we require the robots to fulfill reach-avoid tasks while maintaining certain formation constraints.
 The experiments show that our approach produces formally guaranteed feedback controllers while scaling to many robots.
-In contrast, nominal open loop controllers do not guarantee the satisfaction of the specification and the memory usage of the global formal approach is exponentially larger thus unable to synthesize a controller.
+In contrast, nominal open loop controllers do not guarantee the satisfaction of the specification, and the exponentially large memory usage of the global formal approach prevents synthesis of a controller.
