modified:   intro.tex

--- a/intro.tex
+++ b/intro.tex
@@ -33,7 +33,9 @@ handle precise models of nonlinear dynamics and the effects of disturbance, but 
 
 \begin{figure}[t]
 \includegraphics[scale=0.28]{figures/Algorithm_outline.pdf}
+\vspace*{-0.5cm}
 \caption{Overall algorithm\label{fig:overall}}
+\vspace*{-0.2cm}
 \end{figure}
 
 In this paper, we provide a simple but effective \emph{combined} approach, where a global planning approach is used for nominal trajectory generation and 
