--- a/references.bib
+++ b/references.bib
@@ -9,6 +9,15 @@
   publisher={Springer}
 }
 
+@inproceedings{alur2015pattern,
+  title={Pattern-based refinement of assume-guarantee specifications in reactive synthesis},
+  author={Alur, Rajeev and Moarref, Salar and Topcu, Ufuk},
+  booktitle={International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  pages={501--516},
+  year={2015},
+  organization={Springer}
+}
+
 @book{baier2008principles,
   title={Principles of model checking},
   author={C. Baier and J.-P. Katoen},
@@ -163,6 +172,13 @@
 	author = {S.M. LaValle and S.A. Hutchinson},
 	title = {Optimal motion planning for multiple robots having independent goals},
 	journal = {IEEE Trans. Robot. Autom.}
+}
+
+@inproceedings{majumdarassume,
+  title={Assume-Guarantee Distributed Synthesis},
+  author={Majumdar, Rupak and Mallik, Kaushik and Schmuck, Anne-Kathrin and Zufferey, Damien},
+  booktitle={EMSOFT},
+  year={2020}
 }
 
 @article{DBLP:journals/corr/abs-1911-09773,
