--- a/related_work.tex
+++ b/related_work.tex
@@ -41,7 +41,7 @@ There are methods which do not consider external disturbances and do not provide
 There are other works that use a pre-defined motion primitive library to perform planning for multi-robot 
 systems \cite{saha2016implan,BanusicMPSZ19pgcd,Gavran2017antlab,desai2017drona}. 
 In contrast, our method directly deals with the dynamical model. 
-Our construction can also be seen as an \emph{assume guarantee} technique that decomposes the global problem based on nominal trajectory tubes; similar decompositions have been studied in the discrete case \cite{RajeevUfuk,OurEMSOFT2020}.
+Our construction can also be seen as an \emph{assume guarantee} technique that decomposes the global problem based on nominal trajectory tubes; similar decompositions have been studied in the discrete case \cite{alur2015pattern,majumdarassume}.
 The closest related work that match our level of generality is the one by Bansal et al.\ \cite{bansal2017safe}.
 However, they assume that each robot has its own reach-avoid specification and they only need to avoid collision with the other robots.
 In contrast, we allow global reach-avoid specifications, which subsume the specifications that they consider.
