--- a/references.bib
+++ b/references.bib
@@ -12,7 +12,7 @@
 @inproceedings{alur2015pattern,
   title={Pattern-based refinement of assume-guarantee specifications in reactive synthesis},
   author={Alur, Rajeev and Moarref, Salar and Topcu, Ufuk},
-  booktitle={International Conference on Tools and Algorithms for the Construction and Analysis of Systems},
+  booktitle={TACAS},
   pages={501--516},
   year={2015},
   organization={Springer}
@@ -55,7 +55,7 @@
 	pages = {834--846},
 	author = {A.G. Barto and R.S. Sutton and C.W. Anderson},
 	title = {Neuronlike adaptive elements that can solve difficult learning control problems},
-	journal = {{IEEE} Trans. Syst. Man Cybern. Syst.}
+	journal = {{IEEE} TSMCS}
 }
 
 
@@ -145,7 +145,7 @@
 	pages = {566--580},
 	author = {L.E. Kavraki and P. Svestka and J.-C. Latombe and M.H. Overmars},
 	title = {Probabilistic roadmaps for path planning in high-dimensional configuration spaces},
-	journal = {IEEE Trans. Robot. Autom.}
+	journal = {IEEE TRA}
 }
 
 
@@ -222,7 +222,7 @@
 	pages = {1--19},
 	author = {Ivan Gavran and Rupak Majumdar and Indranil Saha},
 	title = {Antlab},
-	journal = {{ACM} Transactions on Embedded Computing Systems}
+	journal = {{ACM} TECS}
 }
 
 
@@ -236,7 +236,7 @@
 @article{reissig2016feedback,
 	title={Feedback refinement relations for the synthesis of symbolic controllers},
 	author={G. Reissig and A. Weber and M. Rungger},
-	journal={IEEE Trans. Automat. Contr.},
+	journal={IEEE TAC},
 	volume={62},
 	number={4},
 	pages={1781--1796},
@@ -353,7 +353,7 @@
 @article{wongpiromsarn2012receding,
   title={Receding horizon temporal logic planning},
   author={T. Wongpiromsarn and U. Topcu and R.M. Murray},
-  journal={IEEE Trans. Automatic Contr.},
+  journal={IEEE TAC},
   volume={57},
   number={11},
   pages={2817--2830},
