--- a/camera_ready/experiments.tex
+++ b/camera_ready/experiments.tex
@@ -114,7 +114,7 @@ and they need to ensure a minimum safe distance from each other and the obstacle
 Suppose $\set{\Sigma^i}$ 
 % with $\Sigma^i=(X^i,x_\init^i,U^i,W^i,f^i)$ 
 models a set of robots, 
-$\goal^i\subseteq X^i$ are the individual goal sets, and $\delta \in \mathbb{R}_{>0}$ is a safety margin.
+$\goal^i\subseteq X^i$ are the individual goal sets, and $\delta \in \mathbb{R}_{>0}$ is a safety margin. \MS{any comment on the relation between $\delta$ and $\epsilon$??}
 Suppose the specification requires that each robot $\Sigma^i$ eventually reaches $\goal^i$ 
 while avoiding the obstacle $\obs\subseteq \reals^2$ and collision with robots by the margin $\delta$.
 The global specification on the product system $\Sigma^\times$ 
@@ -319,7 +319,7 @@ We choose state and input spaces for the crane to be $X^{1}=[-0.195,5.49]\times[
 We choose state and input partition sizes $\eta_{{X}}^{1}=\begin{bmatrix}0.015&0.035&0.016&0.064\end{bmatrix}^T$, $\eta_{U}^1=0.2$,  $\eta_{{X}}^2=\begin{bmatrix}0.01&0.015\end{bmatrix}^T$ and $\eta_{U}^2=0.1$. %These selections yield discretized models with state and input spaces having $2.5\times 10^9$ and $71$ points for the crane, and $2\times 10^5$ and $61$ points for the vehicle. 
 %Next, we limit both of the state spaces into tubes constructed around the open-loop trajectories with sizes specified as $\varepsilon^{1}=\begin{bmatrix}0.135&0.385&0.176 &0.768\end{bmatrix}^T$ and $\varepsilon^{2}=\begin{bmatrix}0.08&0.12\end{bmatrix}$. %This reduces size of state spaces into $1.2\times 10^7$ and $1.5\times 10^4$ for the crane and vehicle, respectively. 
 %Given the above settings, SCOTS was able to compute abstraction in $511$ and $0.22$ seconds for the crane and the vehicle, respectively. Scots performs synthesis in $91$ and $0.037$ seconds for the crane and the vehicle, respectively.
-Tab.~\ref{tab:runtimes} illustrates list of run times and number of input-state pairs corresponding to local and global ABCD. Noticeably, for the cart-pole model, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). \MS{Note that computing feedback controllers for the crane and vehicle takes $??$ and $??$ seconds, respectively. The large difference is due to the difference in the size of transition systems for the two agents.} Note that, using ALTRO alone would not provide guarantee against bounded disturbance (Fig~\ref{fig:cr_and_lft}, \textbf{right}). 
+Tab.~\ref{tab:runtimes} illustrates list of run times and number of input-state pairs corresponding to local and global ABCD. Noticeably, for the cart-pole model, memory requirement for global ABCD exceeds our limits (1.5TB of RAM). \MS{Note that computing feedback controllers for the crane and vehicle takes $??$ and $??$ seconds, respectively. The large difference is due to the difference in the size of transition systems for the two dynamics.} Note that, using ALTRO alone would not provide guarantee against bounded disturbance (Fig~\ref{fig:cr_and_lft}, \textbf{right}). 
 
 			
 %\begin{figure}[t]
