--- a/camera_ready/references.bib
+++ b/camera_ready/references.bib
@@ -46,6 +46,17 @@
 	year      = {2019}
 }
 
+@article{kousik2020bridging,
+  title={Bridging the gap between safety and real-time performance in receding-horizon trajectory design for mobile robots},
+  author={Kousik, Shreyas and Vaskov, Sean and Bu, Fan and Johnson-Roberson, Matthew and Vasudevan, Ram},
+  journal={The International Journal of Robotics Research},
+  volume={39},
+  number={12},
+  pages={1419--1469},
+  year={2020},
+  publisher={SAGE Publications Sage UK: London, England}
+}
+
 @article{Barto1983,
 	year = {1983},
 	month = sep,
